2008-07-22  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (Descuento): Deleted commented code.
	(TipoVenta): Use clean_container() to clean up the container
	tipo_venta_win_venta.
	(Descuento): Fixed function to deal better with percent and money
	discount.
	(on_btn_nullify_search_clicked): Fixed to properly free the memory
	allocated by condition var.
	(on_selection_nullify_sales_change): Fixed query to not include
	the products already nullified.

2008-07-17  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c: Deleted include of libgksu.h

2008-07-14  Jonathan Gonzalez V.  <zeus@gnu.org>

	* administracion_productos.c (AjustarMercaderia): Let user adjust
	to zero a stock product.

2008-07-11  Jonathan Gonzalez V.  <zeus@gnu.org>

	* credito.c (ClientStatus, CloseClientStatus): Deleted function.

	* postgres-functions.c (ReturnClientCredit): Changed the return
	type from gchar * to gint.

	* ventas.c (CloseWindowClientSelection, WindowClientSelection)
	(SeleccionarCliente, SelectClient, AddDataEmisor, CancelarTipo):
	Deleted functions.

2008-07-10  Jonathan Gonzalez V.  <zeus@gnu.org>

	* utils.c (clean_container): Fixed bug that was deleting labels of
	any widget inside a container even those inside a stock button or
	radio button.

2008-07-09  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_button_new_product_clicked): Move
	clean_container() at the begging so we clean and then set the text.
	(on_btn_get_request_clicked): Added function.
	(on_btn_nullify_buy_clicked): Added as handler to btn_nullify_buy.
	(ChangeSave): Deleted function.
	(CloseSearchByName): Deleted function.
	(CloseSelectProveedores): Deleted function.
	(Ingresar): Deleted function.
	(RemoveBuyProduct): Deleted function.
	(on_button_ok_ingress_clicked): Added clean_container() to all the
	windows called by this function.

	* postgres-functions.c (IngresarProducto): Fix possible bug that
	can produce a bad calculation when try to get how many products
	where interchanged.
